# Dreaminmaster-market-capability-router

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
data/schemas/: outcome.schema.json  platform_term.schema.json
data/seed/: friction_types.json  platform_terms.json
docs/: ACCEPTANCE_CRITERIA.md  AGENT_INTEGRATION.md  AGENT_WORKFLOW.md  ARCHITECTURE.md  CAPABILITY_ROUTING.md  DATA_MODEL.md  GITHUB_PUBLISH.md  OPENMINIS_INTEGRATION.md  PLATFORM_DIALECT_ENGINE.md  PRODUCT_SPEC.md  RISK_MODEL.md  ROADMAP.md  V0.1.1_VALIDATION_SUMMARY.md  V0.2_IMPLEMENTATION_SPEC.md
evals/: README.md
evals/cases/: core_cases.json
examples/: agent_call.py
examples/candidates/: account_service.json  renovation_review.json
plan/: README.md  decisions.md  findings.md  plan.md  progress.md  task_list.md  test_report.md  v0.2_acceptance_report_template.md  v0.2_handoff.md  v0.2_status.md
scripts/: doctor.py  install_skill.py  openminis_smoke.py  run_evals.py  run_hybrid_evals.py  validate_data.py
skills/market-capability-router/: SKILL.md
src/mcr/: __init__.py  api.py  candidate.py  cli.py  data.py  dialect.py  engine.py  friction.py  models.py  outcome.py  query_lattice.py  risk.py  router.py  simple_guard.py
src/mcr/adapters/: __init__.py
tests/: test_api.py  test_candidate.py  test_cli.py  test_dialect.py  test_friction.py  test_outcome.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_review_fixes.py  test_routing.py
(+20 files in other folders)
