[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-capability-router"
version = "0.2.0"
description = "AI + Tool + Human + Market capability routing reference implementation"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Dreaminmaster"}]
dependencies = []

[project.scripts]
mcr = "mcr.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mcr = ["resources/seed/*.json"]
